make Util.newArrayListOfValues an alias to List.of
null checks are performed where they may occur
most modifications use an explicit ArrayList